<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="content">With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements
      and landed jobs at tech giants. Our vision is to build a gigantic network of
      geeks and we are only a fraction of it yet.
  </string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="born">Born</string>
    <string name="albums">Albums</string>
    <string name="stream_on">Stream On</string>
    <string name="listen_on_spotify_icon_content_description">Listen on Spotify Icon</string>
    <string name="listen_on_apple_music_icon_content_description">Listen on Apple Music</string>
    <string name="listen_on_amazon_music_icon_content_description">Listen on Amazon Music</string>
    <string name="listen_on_tidal_icon_content_description">Listen on Tidal</string>
    <string name="listen_on_deezer_icon_content_description">Listen on Deezer</string>
    <string name="album_cover_content_description">Album Cover</string>
    <string name="no_album_text">No albums available for this artist</string>
    <string name="artist_profile_image_content_description">Artist Profile Image</string>
</resources>