<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:theme="@style/Theme.Artyst"
    tools:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/country_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textAppearance="?attr/textAppearanceLabelMedium"
        android:textColor="?attr/colorOnSurfaceInverse"
        app:layout_constraintBottom_toTopOf="@+id/country_value"
        app:layout_constraintEnd_toStartOf="@+id/gender_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textAppearance="?attr/textAppearanceLabelMedium"
        android:textColor="?attr/colorOnSurfaceInverse"
        app:layout_constraintBottom_toTopOf="@+id/gender_value"
        app:layout_constraintEnd_toStartOf="@+id/born_label"
        app:layout_constraintStart_toEndOf="@+id/country_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/born_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/born"
        android:textAppearance="?attr/textAppearanceLabelMedium"
        android:textColor="?attr/colorOnSurfaceInverse"
        app:layout_constraintBottom_toTopOf="@+id/born_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gender_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/country_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/country_label"
        app:layout_constraintStart_toStartOf="@+id/country_label"
        app:layout_constraintTop_toBottomOf="@+id/country_label"
        tools:text="GB" />

    <TextView
        android:id="@+id/gender_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gender_label"
        app:layout_constraintStart_toStartOf="@+id/gender_label"
        app:layout_constraintTop_toBottomOf="@+id/gender_label"
        tools:text="Male" />

    <TextView
        android:id="@+id/born_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/born_label"
        app:layout_constraintStart_toStartOf="@+id/born_label"
        app:layout_constraintTop_toBottomOf="@+id/born_label"
        tools:text="1992" />

</androidx.constraintlayout.widget.ConstraintLayout>


